Removed some modules, and updated background.js and content.js
Trying a new method of web scraping where the background sends a message to the content script in order to read the page, but the extension throws an error about an uncaught promise. Will need to do more research.

--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,29 @@
 {
-  "name": "Wardrobe",
-  "version": "0.1",
-  "description": "A way to keep your clothes from all over the internet",
-  "manifest_version": 3,
+    "name": "Wardrobe",
+    "version": "0.1",
+    "description": "A way to keep your clothes from all over the internet",
+    "manifest_version": 3,
 
-  "background": {
-    "service worker": [
-      "background.js"
-    ]
-  },
+    "content_scripts": [{
+        "matches": ["<all_urls>"],
+        "all_frames": false,
+        "js": ["content.js"],
+        "css": ["style.css"]
+    }],
 
-  "permissions": [
-    "tabs"
-  ],
+    "background": {
+        "service worker": [
+            "background.js"
+        ]
+    },
 
-  "action": {
-    "default_popup": "popup.html"
-  }
+    "permissions": [
+        "tabs",
+        "storage"
+    ],
+
+    "action": {
+        "default_popup": "popup.html"
+    }
 
 }
-
